# pymotifs

./: .travis.yml  README.rst  appveyor.yml  dev-requirements.txt  setup.py
extensions/: Cargo.toml
extensions/src/: lib.rs
pymotifs/: __init__.py
