[package]
name = "rustmotifs"
version = "0.0.1"
authors = ["Boris Pfahringer <bpnzltd@gmail.com>"]

[dependencies]
interpolate_idents = "*"

[dependencies.cpython]
git = "https://github.com/dgrunwald/rust-cpython.git"
default-features = false
features = ["python27-sys"]

[lib]
name = "rustmotifs"
crate-type = ["dylib"]
