[package]
name = "rustmotifs_binding"
version = "0.0.1"
authors = ["Boris Pfahringer <bpnzltd@gmail.com>"]

[dependencies]
interpolate_idents = "*"
rustmotifs = { git = "https://github.com/borispf/rustmotifs.git" }

[dependencies.cpython]
git = "https://github.com/dgrunwald/rust-cpython.git"
default-features = false
features = ["python27-sys"]

[lib]
name = "rustmotifs_binding"
crate-type = ["dylib"]
